Fixed calendar modal background for readabilty

--- a/client/src/pages/AuthSearchResultsPage/AuthSearchResultsPage.scss
+++ b/client/src/pages/AuthSearchResultsPage/AuthSearchResultsPage.scss
@@ -686,3 +686,7 @@
     }
   }
 }
+
+.calendar {
+  background-color: rgba($neutral-white, .75);
+}
