--- a/client/src/pages/TopPicksPage/TopPicksPage.scss
+++ b/client/src/pages/TopPicksPage/TopPicksPage.scss
@@ -550,3 +550,7 @@
 .event-type-options {
   margin-left: .75rem;
 }
+
+.calendar {
+  background-color: rgba($neutral-white, .75);
+}
